Navbar Error Fix
Image Error In Navbar Fixed

--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -22,44 +22,48 @@
                 About Me
             </div>
             <div class="aboutPage-Para">
-            <span>Hey, I'm Junaid Ahmed Shaikh</span>
-            <p>
-                I am a frontend developer. I have a strong knowledge of HTML, CSS, and JavaScript. <br>
-                I am also proficient in Tailwind, Bootstrap and Js. I have a great eye <br>
-                for detail and my work is always of the highest quality. I am a quick learner <br>
-                and I am always willing to take on new challenges. <br>
-            </p>
-            <p>
-                My website are primary hand-coded using HTML5, CSS3 and Javascrit. <br>
-                I'm front-end developer. i work as a freelance across <br>
-                the global with high performance and rich interactive <br>
-                website that work acorss the browser and device <br>
-            </p>
-        </div>
+                <span>Hey, I'm Junaid Ahmed Shaikh</span>
+                <p>
+                    I am a frontend developer. I have a strong knowledge of HTML, CSS, and JavaScript. <br>
+                    I am also proficient in Tailwind, Bootstrap and Js. I have a great eye <br>
+                    for detail and my work is always of the highest quality. I am a quick learner <br>
+                    and I am always willing to take on new challenges. <br>
+                </p>
+                <p>
+                    My website are primary hand-coded using HTML5, CSS3 and Javascrit. <br>
+                    I'm front-end developer. i work as a freelance across <br>
+                    the global with high performance and rich interactive <br>
+                    website that work acorss the browser and device <br>
+                </p>
+            </div>
         </section>
     </main>
     <nav id="navbar" class="hidden">
         <div class="navbar-links">
-            <a href="/aboutPage/about.html">
-                <h2>About Us</h2>
-                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848119/portfolio%20Image/Screenshot_20230116_111212_wip6qs.png"
+            <a class="navbar-card" href="/index.html">
+                <h2>Home</h2>
+                <img id="navbarImageAbout"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Home_foglax.png"
+                    alt="Homepage Loading">
+            </a>
+            <a class="navbar-card" href="/skillsPage/skillsPage.html">
+                <h2>Skills & Tools</h2>
+                <img id="navbarImageSkills"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Skill_cgznni.png"
                     alt="">
             </a>
-            <a href="/skillsPage/skillsPage.html">
-                <h2>Skills</h2>
-                <img id="navbarImageSkills" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848120/portfolio%20Image/Screenshot_20230116_111227_law3nd.png"
-                    alt="">
-            </a>
-            <a href="/projectPage/projectPage.html">
+            <a class="navbar-card" href="/projectPage/projectPage.html">
                 <h2>Project</h2>
-                <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848127/portfolio%20Image/Screenshot_20230116_110632_tqdsmb.png"
+                <img id="navbarImageProject"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Project_g7zclb.png"
                     alt="">
             </a>
-            <a href="/contactPage/contactPage.html">
+            <a class="navbar-card" href="/contactPage/contactPage.html">
                 <h2>Contact Me</h2>
-                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848123/portfolio%20Image/Screenshot_20230116_111300_gxwkcs.png"
+                <img id="navbarImageContact"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Contact_mdiwar.png"
                     alt="">
-            </a>
+                </a>
         </div>
     </nav>
     <button id="nav-toggle" type="button" class="hameburger-container">
