--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 </head>
 <body data-nav="false">
     <main>
+        <!-- Dark Mode Button -->
+        <span class="darkmode-div">
+            <input type="checkbox" id="darkmode">
+         <label for="checkbox">
+            <i class="fa-solid fa-circle-half-stroke"></i>
+         </label>
+        </span>
         <section class="homepage_section">
             <h1 class="primary-heading-of-homepage">Junaid Ahmed </h1>
             <h3 class="primary-heading-of-homepage" id="primary-sub-heading-of-homepage">Frontend developer and a
@@ -38,22 +45,23 @@
     </main>
     <nav id="navbar" class="hidden">
         <div class="navbar-links">
-            <a href="/aboutPage/about.html">
+            <a class="navbar-card" href="/aboutPage/about.html">
                 <h2>About Us</h2>
                 <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848119/portfolio%20Image/Screenshot_20230116_111212_wip6qs.png"
                     alt="">
             </a>
-            <a href="/skillsPage/skillsPage.html">
-                <h2>Skills</h2>
-                <img id="navbarImageSkills" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848120/portfolio%20Image/Screenshot_20230116_111227_law3nd.png"
+            <a class="navbar-card" href="/skillsPage/skillsPage.html">
+                <h2>Skills & Tools</h2>
+                <img id="navbarImageSkills"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Skill_cgznni.png"
                     alt="">
             </a>
-            <a href="/projectPage/projectPage.html">
+            <a class="navbar-card" href="/projectPage/projectPage.html">
                 <h2>Project</h2>
                 <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848127/portfolio%20Image/Screenshot_20230116_110632_tqdsmb.png"
                     alt="">
             </a>
-            <a href="/contactPage/contactPage.html">
+            <a class="navbar-card" href="/contactPage/contactPage.html">
                 <h2>Contact Me</h2>
                 <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848123/portfolio%20Image/Screenshot_20230116_111300_gxwkcs.png"
                     alt="">
