--- a/contactPage/contactPage.html
+++ b/contactPage/contactPage.html
@@ -25,6 +25,45 @@
             </form>
         </section>
     </main>
+    <nav id="navbar" class="hidden">
+        <div class="navbar-links">
+            <a class="navbar-card" href="/index.html">
+                <h2>Home</h2>
+                <img id="navbarImageAbout"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Home_foglax.png"
+                    alt="Homepage Loading">
+            </a>
+            <a class="navbar-card" href="/aboutPage/about.html">
+                <h2>About Me</h2>
+                <img id="navbarImageContact"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/About_id4c5c.png"
+                    alt="">
+            </a>
+            <a class="navbar-card" href="/projectPage/projectPage.html">
+                <h2>Project</h2>
+                <img id="navbarImageProject"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Project_g7zclb.png"
+                    alt="">
+            </a>
+            <a class="navbar-card" href="/skillsPage/skillsPage.html">
+                <h2>Skills & Tools</h2>
+                <img id="navbarImageSkills"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Skill_cgznni.png"
+                    alt="">
+            </a>
+        </div>
+    </nav>
+    <button id="nav-toggle" type="button" class="hameburger-container">
+        <div class="switch">
+            <input type="checkbox">
+            <div>
+                <span class="line-1"></span>
+                <span class="line-2"></span>
+                <span class="line-3"></span>
+            </div>
+        </div>
+    </button>
+    <script src="/main.js"></script>
     <!-- <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
         function sendEmail(){
