--- a/projectPage/projectPage.html
+++ b/projectPage/projectPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,42 +11,94 @@
     <link rel="stylesheet" href="/index.html">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <h1>Head</h1>
     </header>
     <main id="projectPage-Main">
-<section class="projectPage-Section">
-    <div class="primary-heading-of-pages">
-        Works & Projects
-    </div>
-    <div class="work-project-box">
-        <a href="">
-            <div class="work-card" id="work-1">
-                <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1668575897/Stitched%20Clothing%20Project/bg%20Images/Screenshot_20221116_104626_wbk9p0.png"
-                    alt="">
-                <h3>Nucleus Store</h3>
-                <span>Live Source</span>
+        <section class="projectPage-Section">
+            <div class="primary-heading-of-pages">
+                Works & Projects
             </div>
-        </a>
-        <a href="https://Starbucksofficial.netlify.app/">
-            <div class="work-card" id="work-2">
-                <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1669444698/Screenshot_20221126_120759_p76l3h.png"
-                    alt="">
-
-                <h3>Starbucks</h3>
+            <div class="work-project-box">
+                <a href="https://notexx.netlify.app/">
+                    <div class="work-card" id="work-1">
+                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678119148/portfolio%20Image/Screenshot_2023-03-06_214158_gevqi9.png"
+                            alt="">
+                        <h3>Notex</h3>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="work-card" id="work-1">
+                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1668575897/Stitched%20Clothing%20Project/bg%20Images/Screenshot_20221116_104626_wbk9p0.png"
+                            alt="">
+                        <h3>Nucleus Store</h3>
+                        <span>Live Source</span>
+                    </div>
+                </a>
+                <a href="https://Starbucksofficial.netlify.app/">
+                    <div class="work-card" id="work-2">
+                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1669444698/Screenshot_20221126_120759_p76l3h.png"
+                            alt="">
+                        <h3>Starbucks</h3>
+                    </div>
+                </a>
+                <!-- <a href="https://www.figma.com/proto/sNSbjUAa449z569uJHHP9h/Plantex?page-id=0%3A1&node-id=0%3A3&viewport=746%2C173%2C0.33&scaling=scale-down&starting-point-node-id=0%3A3&show-proto-sidebar=1">
+                    <div class="work-card" id="work-1">
+                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678119782/portfolio%20Image/Screenshot_2023-03-06_215242_hy2o8i.png"
+                            alt="">
+                        <h3>Plantex Working*</h3>
+                    </div>
+                </a> -->
+                <a href="https://oscarinternationalmarine.com/">
+                    <div class="work-card" id="work-3">
+                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1668575870/Stitched%20Clothing%20Project/bg%20Images/Screenshot_20221116_104716_crpqb2.png"
+                            alt="">
+                        <h3>Oscar International Marine Store</h3>
+                    </div>
+                </a>
             </div>
-        </a>
-        <a href="https://oscarinternationalmarine.com/">
-            <div class="work-card" id="work-3">
-                <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1668575870/Stitched%20Clothing%20Project/bg%20Images/Screenshot_20221116_104716_crpqb2.png"
-                    alt="">
-
-                <h3>Oscar International Marine Store</h3>
-            </div>
-        </a>
-    </div>
-</section>
+        </section>
     </main>
+    <nav id="navbar" class="hidden">
+        <div class="navbar-links">
+            <a class="navbar-card" href="/index.html">
+                <h2>Home</h2>
+                <img id="navbarImageAbout"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Home_foglax.png"
+                    alt="Homepage Loading">
+            </a>
+            <a class="navbar-card" href="/aboutPage/about.html">
+                <h2>About Me</h2>
+                <img id="navbarImageContact"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/About_id4c5c.png"
+                    alt="">
+            </a>
+            <a class="navbar-card" href="/skillsPage/skillsPage.html">
+                <h2>Skills & Tools</h2>
+                <img id="navbarImageSkills"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Skill_cgznni.png"
+                    alt="">
+            </a>
+            <a class="navbar-card" href="/contactPage/contactPage.html">
+                <h2>Contact Me</h2>
+                <img id="navbarImageContact"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Contact_mdiwar.png"
+                    alt="">
+            </a>
+        </div>
+    </nav>
+    <button id="nav-toggle" type="button" class="hameburger-container">
+        <div class="switch">
+            <input type="checkbox">
+            <div>
+                <span class="line-1"></span>
+                <span class="line-2"></span>
+                <span class="line-3"></span>
+            </div>
+        </div>
+    </button>
+    <script src="/main.js"></script>
 </body>
+
 </html>
