Commit Dark Mode Code

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 <body data-nav="false">
     <main>
         <!-- Dark Mode Button -->
-        <span class="darkmode-div">
+        <!-- <span class="darkmode-div">
             <input type="checkbox" id="darkmode">
          <label for="checkbox">
             <i class="fa-solid fa-circle-half-stroke"></i>
          </label>
-        </span>
+        </span> -->
         <section class="homepage_section">
             <h1 class="primary-heading-of-homepage">Junaid Ahmed </h1>
             <h3 class="primary-heading-of-homepage" id="primary-sub-heading-of-homepage">Frontend developer and a
