Image Src Updated In Homepage
Image link Updated In Homepage

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="navbar-links">
             <a class="navbar-card" href="/aboutPage/about.html">
                 <h2>About Us</h2>
-                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848119/portfolio%20Image/Screenshot_20230116_111212_wip6qs.png"
+                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/About_id4c5c.png"
                     alt="">
             </a>
             <a class="navbar-card" href="/skillsPage/skillsPage.html">
@@ -58,12 +58,12 @@
             </a>
             <a class="navbar-card" href="/projectPage/projectPage.html">
                 <h2>Project</h2>
-                <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848127/portfolio%20Image/Screenshot_20230116_110632_tqdsmb.png"
+                <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Project_g7zclb.png"
                     alt="">
             </a>
             <a class="navbar-card" href="/contactPage/contactPage.html">
                 <h2>Contact Me</h2>
-                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1673848123/portfolio%20Image/Screenshot_20230116_111300_gxwkcs.png"
+                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Contact_mdiwar.png"
                     alt="">
             </a>
         </div>
