--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -18,24 +18,28 @@
     </header>
     <main>
         <section class="aboutPage-section">
-            <div class="primary-heading-of-pages">
+            <div class="all-page-heading">
                 About Me
             </div>
             <div class="aboutPage-Para">
-                <span>Hey, I'm Junaid Ahmed Shaikh</span>
+                
+                   
+                <span>Hey, i am <bad id="about-name-of-intro"> Junaid Ahmed Shaikh</bad></span> <br> <hr>
                 <p>
-                    I am a frontend developer. I have a strong knowledge of HTML, CSS, and JavaScript. <br>
-                    I am also proficient in Tailwind, Bootstrap and Js. I have a great eye <br>
-                    for detail and my work is always of the highest quality. I am a quick learner <br>
-                    and I am always willing to take on new challenges. <br>
-                </p>
-                <p>
-                    My website are primary hand-coded using HTML5, CSS3 and Javascrit. <br>
-                    I'm front-end developer. i work as a freelance across <br>
-                    the global with high performance and rich interactive <br>
-                    website that work acorss the browser and device <br>
+                I am a frontend developer. I have a strong knowledge of HTML, CSS, and JavaScript. <br>
+                I am also proficient in Tailwind, Bootstrap and Js. I have a great eye <br>
+                for detail and my work is always of the highest quality. I am a quick learner <br>
+                and I am always willing to take on new challenges. <br>
+                <br>
+                My website are primary hand-coded using HTML5, CSS3 and Javascrit. <br>
+                I'm front-end developer. i work as a freelance across <br>
+                the global with high performance and rich interactive <br>
+                website that work acorss the browser and device <br>                
                 </p>
             </div>
+            <!-- <div class="resume-box">
+                <a href="/index.html" download=""> <i class="fa-solid fa-arrow-down"></i> Resume </a>
+            </div> -->
         </section>
     </main>
     <nav id="navbar" class="hidden">
