--- a/projectPage/projectPage.html
+++ b/projectPage/projectPage.html
@@ -17,27 +17,27 @@
     </header>
     <main id="projectPage-Main">
         <section class="projectPage-Section">
-            <div class="primary-heading-of-pages">
+            <div class="all-page-heading">
                 Works & Projects
             </div>
             <div class="work-project-box">
-                <a href="https://notexx.netlify.app/">
-                    <div class="work-card" id="work-1">
+                <a class="work-card" href="https://notexx.netlify.app/">
+                    <div  id="work-1">
                         <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678119148/portfolio%20Image/Screenshot_2023-03-06_214158_gevqi9.png"
                             alt="">
                         <h3>Notex</h3>
                     </div>
                 </a>
-                <a href="">
-                    <div class="work-card" id="work-1">
+                <a href="" class="work-card">
+                    <div  id="work-1">
                         <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1668575897/Stitched%20Clothing%20Project/bg%20Images/Screenshot_20221116_104626_wbk9p0.png"
                             alt="">
                         <h3>Nucleus Store</h3>
                         <span>Live Source</span>
                     </div>
                 </a>
-                <a href="https://Starbucksofficial.netlify.app/">
-                    <div class="work-card" id="work-2">
+                <a href="https://Starbucksofficial.netlify.app/" class="work-card">
+                    <div id="work-2">
                         <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1669444698/Screenshot_20221126_120759_p76l3h.png"
                             alt="">
                         <h3>Starbucks</h3>
@@ -50,8 +50,8 @@
                         <h3>Plantex Working*</h3>
                     </div>
                 </a> -->
-                <a href="https://oscarinternationalmarine.com/">
-                    <div class="work-card" id="work-3">
+                <a href="https://oscarinternationalmarine.com/" class="work-card">
+                    <div id="work-3">
                         <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1668575870/Stitched%20Clothing%20Project/bg%20Images/Screenshot_20221116_104716_crpqb2.png"
                             alt="">
                         <h3>Oscar International Marine Store</h3>
@@ -65,25 +65,23 @@
             <a class="navbar-card" href="/index.html">
                 <h2>Home</h2>
                 <img id="navbarImageAbout"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Home_foglax.png"
-                    alt="Homepage Loading">
+                src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/home_r1mhhx.png"
+                alt="Homepage Loading">
             </a>
             <a class="navbar-card" href="/aboutPage/about.html">
                 <h2>About Me</h2>
-                <img id="navbarImageContact"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/About_id4c5c.png"
+                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/about_onmbtu.png"
                     alt="">
             </a>
             <a class="navbar-card" href="/skillsPage/skillsPage.html">
                 <h2>Skills & Tools</h2>
                 <img id="navbarImageSkills"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Skill_cgznni.png"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/skill_e1dqpa.png"
                     alt="">
             </a>
             <a class="navbar-card" href="/contactPage/contactPage.html">
                 <h2>Contact Me</h2>
-                <img id="navbarImageContact"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Contact_mdiwar.png"
+                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327845/portfolio%20Image/contact_ba2kb4.png"
                     alt="">
             </a>
         </div>
