--- a/skillsPage/skillsPage.html
+++ b/skillsPage/skillsPage.html
@@ -14,7 +14,7 @@
     <header></header>
     <main id="skillsPage-Main">
         <section class="skillsPage-Section">
-            <div class="primary-heading-of-pages">
+            <div class="all-page-heading">
                 Skills & Tools
             </div>
             <div class="skill-Container">
@@ -86,27 +86,23 @@
             <a class="navbar-card" href="/index.html">
                 <h2>Home</h2>
                 <img id="navbarImageAbout"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Home_foglax.png"
-                    alt="Homepage Loading">
+                src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/home_r1mhhx.png"
+                alt="Homepage Loading">
             </a>
             <a class="navbar-card" href="/aboutPage/about.html">
                 <h2>About Me</h2>
-                <img id="navbarImageContact"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/About_id4c5c.png"
+                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/about_onmbtu.png"
                     alt="">
             </a>
             <a class="navbar-card" href="/projectPage/projectPage.html">
                 <h2>Project</h2>
-                <img id="navbarImageProject"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Project_g7zclb.png"
+                <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327847/portfolio%20Image/work_zvbmh9.png"
                     alt="">
             </a>
             <a class="navbar-card" href="/contactPage/contactPage.html">
                 <h2>Contact Me</h2>
-                <img id="navbarImageContact"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Contact_mdiwar.png"
+                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327845/portfolio%20Image/contact_ba2kb4.png"
                     alt="">
-                </a>
         </div>
     </nav>
     <button id="nav-toggle" type="button" class="hameburger-container">
