--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          </label>
         </span> -->
         <section class="homepage_section">
-            <h1 class="primary-heading-of-homepage">Junaid Ahmed </h1>
+            <h1 class="primary-heading-of-homepage">Junaid Ahmed Shaikh</h1>
             <h3 class="primary-heading-of-homepage" id="primary-sub-heading-of-homepage">Frontend developer and a
                 student</h3>
             <div class="social-media-container">
@@ -43,27 +43,28 @@
             </div>
         </section>
     </main>
+    <!-- Navigation Section  -->
     <nav id="navbar" class="hidden">
         <div class="navbar-links">
             <a class="navbar-card" href="/aboutPage/about.html">
-                <h2>About Us</h2>
-                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/About_id4c5c.png"
+                <h2>About Me</h2>
+                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/about_onmbtu.png"
                     alt="">
             </a>
             <a class="navbar-card" href="/skillsPage/skillsPage.html">
                 <h2>Skills & Tools</h2>
                 <img id="navbarImageSkills"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Skill_cgznni.png"
+                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/skill_e1dqpa.png"
                     alt="">
             </a>
             <a class="navbar-card" href="/projectPage/projectPage.html">
                 <h2>Project</h2>
-                <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Project_g7zclb.png"
+                <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327847/portfolio%20Image/work_zvbmh9.png"
                     alt="">
             </a>
             <a class="navbar-card" href="/contactPage/contactPage.html">
                 <h2>Contact Me</h2>
-                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Contact_mdiwar.png"
+                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327845/portfolio%20Image/contact_ba2kb4.png"
                     alt="">
             </a>
         </div>
