Navbar image link changed
In the Navbar image tag attribute href link changed & update in a main js file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Junaid | Frontend Developer</title>
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/dist/output.css">
-    <script src="https//cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald&display=swap" rel="stylesheet">
@@ -47,24 +46,24 @@
     <nav id="navbar" class="hidden">
         <div class="navbar-links">
             <a class="navbar-card" href="/aboutPage/about.html">
-                <h2>About Me</h2>
-                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/about_onmbtu.png"
+                <!-- <h2>About Me</h2> -->
+                <img  class="navbarAboutImgScr" src=""
+                alt="">
+            </a>
+            <a class="navbar-card" href="/projectPage/projectPage.html">
+                <!-- <h2>Projects</h2> -->
+                <img  class="navbarProjectImgSrc" src=""
                     alt="">
             </a>
             <a class="navbar-card" href="/skillsPage/skillsPage.html">
-                <h2>Skills & Tools</h2>
-                <img id="navbarImageSkills"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/skill_e1dqpa.png"
-                    alt="">
-            </a>
-            <a class="navbar-card" href="/projectPage/projectPage.html">
-                <h2>Project</h2>
-                <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327847/portfolio%20Image/work_zvbmh9.png"
-                    alt="">
+                <!-- <h2>Skills</h2> -->
+                <img class="navbarSkillImgScr" 
+                src=""
+                alt="">
             </a>
             <a class="navbar-card" href="/contactPage/contactPage.html">
-                <h2>Contact Me</h2>
-                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327845/portfolio%20Image/contact_ba2kb4.png"
+                <!-- <h2>Contact Me</h2> -->
+                <img  class="navbarContactImgSrc" src=""
                     alt="">
             </a>
         </div>
