--- a/projectPage/projectPage.html
+++ b/projectPage/projectPage.html
@@ -18,7 +18,7 @@
     <main id="projectPage-Main">
         <section class="projectPage-Section">
             <div class="all-page-heading">
-                Works & Projects
+                Projects
             </div>
             <div class="work-project-box">
                 <a class="work-card" href="https://notexx.netlify.app/">
@@ -63,25 +63,21 @@
     <nav id="navbar" class="hidden">
         <div class="navbar-links">
             <a class="navbar-card" href="/index.html">
-                <h2>Home</h2>
-                <img id="navbarImageAbout"
-                src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/home_r1mhhx.png"
-                alt="Homepage Loading">
+                <img class="navbarHomeImgScr" 
+                    src=""
+                    alt="Homepage Loading">
             </a>
             <a class="navbar-card" href="/aboutPage/about.html">
-                <h2>About Me</h2>
-                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/about_onmbtu.png"
+                <img  class="navbarAboutImgScr" src=""
                     alt="">
             </a>
             <a class="navbar-card" href="/skillsPage/skillsPage.html">
-                <h2>Skills & Tools</h2>
-                <img id="navbarImageSkills"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/skill_e1dqpa.png"
-                    alt="">
+                <img class="navbarSkillImgScr" 
+                src=""
+                alt="">
             </a>
             <a class="navbar-card" href="/contactPage/contactPage.html">
-                <h2>Contact Me</h2>
-                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327845/portfolio%20Image/contact_ba2kb4.png"
+                <img  class="navbarContactImgSrc" src=""
                     alt="">
             </a>
         </div>
