--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -44,30 +44,28 @@
     </main>
     <nav id="navbar" class="hidden">
         <div class="navbar-links">
-            <a class="navbar-card" href="/index.html">
-                <h2>Home</h2>
-                <img id="navbarImageAbout"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Home_foglax.png"
+           <a class="navbar-card" href="/index.html">
+                <!-- <h2>Home</h2> -->
+                <img class="navbarHomeImgScr" 
+                    src=""
                     alt="Homepage Loading">
             </a>
-            <a class="navbar-card" href="/skillsPage/skillsPage.html">
-                <h2>Skills & Tools</h2>
-                <img id="navbarImageSkills"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Skill_cgznni.png"
-                    alt="">
-            </a>
             <a class="navbar-card" href="/projectPage/projectPage.html">
-                <h2>Project</h2>
-                <img id="navbarImageProject"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116581/portfolio%20Image/Project_g7zclb.png"
-                    alt="">
+                <!-- <h2>Projects</h2> -->
+                <img  class="navbarProjectImgSrc" src=""
+                alt="">
+            </a>
+            <a class="navbar-card" href="/skillsPage/skillsPage.html">
+                <!-- <h2>Skills</h2> -->
+                <img class="navbarSkillImgScr" 
+                src=""
+                alt="">
             </a>
             <a class="navbar-card" href="/contactPage/contactPage.html">
-                <h2>Contact Me</h2>
-                <img id="navbarImageContact"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678116579/portfolio%20Image/Contact_mdiwar.png"
+                <!-- <h2>Contact Me</h2> -->
+                <img  class="navbarContactImgSrc" src=""
                     alt="">
-                </a>
+            </a>
         </div>
     </nav>
     <button id="nav-toggle" type="button" class="hameburger-container">
