--- a/contactPage/contactPage.html
+++ b/contactPage/contactPage.html
@@ -58,7 +58,7 @@
                      
                      <input type="submit" placeholder="Submit">
                 </form> -->
-                <img src="/Illustrations/14620625_5484597.jpg" alt="">
+                <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682355446/portfolio%20Image/Illustrations_For_Contact_Page_wgwngk.png" alt="">
              </div>
             </div>
         </section>
@@ -66,25 +66,25 @@
     <nav id="navbar" class="hidden">
         <div class="navbar-links">
             <a class="navbar-card" href="/index.html">
-                <h2>Home</h2>
-                <img id="navbarImageAbout"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/home_r1mhhx.png"
+                <!-- <h2>Home</h2> -->
+                <img class="navbarHomeImgScr" 
+                    src=""
                     alt="Homepage Loading">
             </a>
             <a class="navbar-card" href="/aboutPage/about.html">
-                <h2>About Me</h2>
-                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/about_onmbtu.png"
+                <!-- <h2>About Me</h2> -->
+                <img  class="navbarAboutImgScr" src=""
                     alt="">
             </a>
             <a class="navbar-card" href="/projectPage/projectPage.html">
-                <h2>Project</h2>
-                <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327847/portfolio%20Image/work_zvbmh9.png"
+                <!-- <h2>Projects</h2> -->
+                <img  class="navbarProjectImgSrc" src=""
                     alt="">
             </a>
             <a class="navbar-card" href="/skillsPage/skillsPage.html">
-                <h2>Skills & Tools</h2>
-                <img id="navbarImageSkills"
-                    src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/skill_e1dqpa.png"
+                <!-- <h2>Skills</h2> -->
+                <img class="navbarSkillImgScr" 
+                    src=""
                     alt="">
             </a>
         </div>
