--- a/skillsPage/skillsPage.html
+++ b/skillsPage/skillsPage.html
@@ -84,25 +84,26 @@
     <nav id="navbar" class="hidden">
         <div class="navbar-links">
             <a class="navbar-card" href="/index.html">
-                <h2>Home</h2>
-                <img id="navbarImageAbout"
-                src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/home_r1mhhx.png"
-                alt="Homepage Loading">
+                <!-- <h2>Home</h2> -->
+                <img class="navbarHomeImgScr" 
+                    src=""
+                    alt="Homepage Loading">
             </a>
             <a class="navbar-card" href="/aboutPage/about.html">
-                <h2>About Me</h2>
-                <img id="navbarImageAbout" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327844/portfolio%20Image/about_onmbtu.png"
+                <!-- <h2>About Me</h2> -->
+                <img  class="navbarAboutImgScr" src=""
                     alt="">
             </a>
             <a class="navbar-card" href="/projectPage/projectPage.html">
-                <h2>Project</h2>
-                <img id="navbarImageProject" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327847/portfolio%20Image/work_zvbmh9.png"
-                    alt="">
+                <!-- <h2>Projects</h2> -->
+                <img  class="navbarProjectImgSrc" src=""
+                alt="">
             </a>
             <a class="navbar-card" href="/contactPage/contactPage.html">
-                <h2>Contact Me</h2>
-                <img id="navbarImageContact" src="https://res.cloudinary.com/difvkvxuy/image/upload/v1682327845/portfolio%20Image/contact_ba2kb4.png"
+                <!-- <h2>Contact Me</h2> -->
+                <img  class="navbarContactImgSrc" src=""
                     alt="">
+            </a>
         </div>
     </nav>
     <button id="nav-toggle" type="button" class="hameburger-container">
