Updated Navigation {Hamburger}

--- a/skillsPage/skillsPage.html
+++ b/skillsPage/skillsPage.html
@@ -97,11 +97,12 @@
             <a class="navbar-card" href="/projectPage/projectPage.html">
                 <!-- <h2>Projects</h2> -->
                 <img  class="navbarProjectImgSrc" src=""
-                alt="">
+                    alt="">
             </a>
-            <a class="navbar-card" href="/contactPage/contactPage.html">
-                <!-- <h2>Contact Me</h2> -->
-                <img  class="navbarContactImgSrc" src=""
+            <a class="navbar-card" href="/skillsPage/skillsPage.html">
+                <!-- <h2>Skills</h2> -->
+                <img class="navbarSkillImgScr" 
+                    src=""
                     alt="">
             </a>
         </div>
