--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -44,26 +44,26 @@
     </main>
     <nav id="navbar" class="hidden">
         <div class="navbar-links">
-           <a class="navbar-card" href="/index.html">
+            <a class="navbar-card" href="/index.html">
                 <!-- <h2>Home</h2> -->
                 <img class="navbarHomeImgScr" 
                     src=""
                     alt="Homepage Loading">
             </a>
+            <a class="navbar-card" href="/aboutPage/about.html">
+                <!-- <h2>About Me</h2> -->
+                <img  class="navbarAboutImgScr" src=""
+                    alt="">
+            </a>
             <a class="navbar-card" href="/projectPage/projectPage.html">
                 <!-- <h2>Projects</h2> -->
                 <img  class="navbarProjectImgSrc" src=""
-                alt="">
+                    alt="">
             </a>
             <a class="navbar-card" href="/skillsPage/skillsPage.html">
                 <!-- <h2>Skills</h2> -->
                 <img class="navbarSkillImgScr" 
-                src=""
-                alt="">
-            </a>
-            <a class="navbar-card" href="/contactPage/contactPage.html">
-                <!-- <h2>Contact Me</h2> -->
-                <img  class="navbarContactImgSrc" src=""
+                    src=""
                     alt="">
             </a>
         </div>
