--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Junaid | Frontend Developer</title>
     <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="./hamburger.css">
     <link rel="stylesheet" href="/dist/output.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,42 +44,40 @@
         </section>
     </main>
     <!-- Navigation Section  -->
+   
     <nav id="navbar" class="hidden">
-        <div class="navbar-links">
-            <a class="navbar-card" href="/aboutPage/about.html">
-                <!-- <h2>About Me</h2> -->
-                <img  class="navbarAboutImgScr" src=""
-                alt="">
-            </a>
-            <a class="navbar-card" href="/projectPage/projectPage.html">
-                <!-- <h2>Projects</h2> -->
-                <img  class="navbarProjectImgSrc" src=""
-                    alt="">
-            </a>
-            <a class="navbar-card" href="/skillsPage/skillsPage.html">
-                <!-- <h2>Skills</h2> -->
-                <img class="navbarSkillImgScr" 
-                src=""
-                alt="">
-            </a>
-            <a class="navbar-card" href="/contactPage/contactPage.html">
-                <!-- <h2>Contact Me</h2> -->
-                <img  class="navbarContactImgSrc" src=""
-                    alt="">
-            </a>
-        </div>
-    </nav>
-    <button id="nav-toggle" type="button" class="hameburger-container">
-        <div class="switch">
-            <input type="checkbox">
-            <div>
-                <span class="line-1"></span>
-                <span class="line-2"></span>
-                <span class="line-3"></span>
-            </div>
-        </div>
-    </button>
+      <div class="navbar-links">
+          <a class="navbar-card" href="/index.html">
+              <!-- <h2>Home</h2> -->
+              <h1>Home</h1>
+          </a>
+          <a class="navbar-card" href="/aboutPage/about.html">
+              <!-- <h2>About Me</h2> -->
+              <h1>Contact</h1>
+          </a>
+          <a class="navbar-card" href="/projectPage/projectPage.html">
+              <!-- <h2>Projects</h2> -->
+              <h1>Project</h1>
+          </a>
+          <a class="navbar-card" href="/skillsPage/skillsPage.html">
+              <!-- <h2>Skills</h2> -->
+              <img class="navbarSkillImgScr" 
+                  src=""
+                  alt="">
+          </a>
+      </div>
+  </nav>
+  <button id="nav-toggle" type="button" class="hameburger-container">
+      <div class="switch">
+          <input type="checkbox">
+          <div>
+              <span class="line-1"></span>
+              <span class="line-2"></span>
+              <span class="line-3"></span>
+          </div>
+      </div>
+  </button>
     <script src="/main.js"></script>
+   
 </body>
-
 </html>
