Updated Navbar Link

--- a/index.html
+++ b/index.html
@@ -46,26 +46,29 @@
     <!-- Navigation Section  -->
    
     <nav id="navbar" class="hidden">
-      <div class="navbar-links">
-          <a class="navbar-card" href="/index.html">
-              <!-- <h2>Home</h2> -->
-              <h1>Home</h1>
-          </a>
-          <a class="navbar-card" href="/aboutPage/about.html">
-              <!-- <h2>About Me</h2> -->
-              <h1>Contact</h1>
-          </a>
-          <a class="navbar-card" href="/projectPage/projectPage.html">
-              <!-- <h2>Projects</h2> -->
-              <h1>Project</h1>
-          </a>
-          <a class="navbar-card" href="/skillsPage/skillsPage.html">
-              <!-- <h2>Skills</h2> -->
-              <img class="navbarSkillImgScr" 
-                  src=""
-                  alt="">
-          </a>
-      </div>
+        <div class="navbar-links">
+            <a class="navbar-card" href="/index.html">
+                <!-- <h2>Home</h2> -->
+                <img class="navbarHomeImgScr" 
+                    src=""
+                    alt="Homepage Loading">
+            </a>
+            <a class="navbar-card" href="/aboutPage/about.html">
+                <!-- <h2>About Me</h2> -->
+                <img  class="navbarAboutImgScr" src=""
+                    alt="">
+            </a>
+            <a class="navbar-card" href="/projectPage/projectPage.html">
+                <!-- <h2>Projects</h2> -->
+                <img  class="navbarProjectImgSrc" src=""
+                    alt="">
+            </a>
+            <a class="navbar-card" href="/skillsPage/skillsPage.html">
+                <!-- <h2>Skills</h2> -->
+                <img class="navbarSkillImgScr" 
+                    src=""
+                    alt="">
+            </a>
   </nav>
   <button id="nav-toggle" type="button" class="hameburger-container">
       <div class="switch">
