--- a/projectPage/projectPage.html
+++ b/projectPage/projectPage.html
@@ -21,11 +21,18 @@
                 Projects
             </div>
             <div class="work-project-box">
-                <a class="work-card" href="https://notexx.netlify.app/">
-                    <div  id="work-1">
-                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678119148/portfolio%20Image/Screenshot_2023-03-06_214158_gevqi9.png"
+                <a class="work-card" href="https://todosters.netlify.app/">
+                    <div  id="work-0">
+                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1693740008/Screenshot_2023-09-03_144952_i3g935.png"
                             alt="">
-                        <h3>Notex</h3>
+                        <h3>Todoster</h3>
+                    </div>
+                </a>
+                <a class="work-card" href="gitspot.netlify.app/">
+                    <div  id="work-1">
+                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1689478221/GitSpot/Screenshot_2023-07-16_085837_bmeuik.png"
+                            alt="">
+                        <h3>GitSpot</h3>
                     </div>
                 </a>
                 <a href="" class="work-card">
