In Project Page
Project Card Created Brand New In Project Page

--- a/projectPage/projectPage.html
+++ b/projectPage/projectPage.html
@@ -1,109 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Junaid | Work And Project</title>
-    <link rel="stylesheet" href="/projectPage/projectPage.css">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/index.html">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="/projectPage/projectPage.css" />
+    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/index.html" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/433b452dac.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
-    <header>
-    </header>
+  <body>
+    <header></header>
     <main id="projectPage-Main">
-        <section class="projectPage-Section">
-            <div class="all-page-heading">
-                Projects
+      <section class="projectPage-Section">
+        <div class="all-page-heading">Projects</div>
+        <div class="work-project-box">
+         
+          <div class="project-card-outer">
+            <div class="image-side-for-project-card">
+              <img
+                src="https://res.cloudinary.com/difvkvxuy/image/upload/v1693740008/Screenshot_2023-09-03_144952_i3g935.png"
+                alt=""
+              />
             </div>
-            <div class="work-project-box">
-                <a class="work-card" href="https://todosters.netlify.app/">
-                    <div  id="work-0">
-                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1693740008/Screenshot_2023-09-03_144952_i3g935.png"
-                            alt="">
-                        <h3>Todoster</h3>
-                    </div>
-                </a>
-                <a class="work-card" href="gitspot.netlify.app/">
-                    <div  id="work-1">
-                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1689478221/GitSpot/Screenshot_2023-07-16_085837_bmeuik.png"
-                            alt="">
-                        <h3>GitSpot</h3>
-                    </div>
-                </a>
-                <a href="" class="work-card">
-                    <div  id="work-1">
-                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1668575897/Stitched%20Clothing%20Project/bg%20Images/Screenshot_20221116_104626_wbk9p0.png"
-                            alt="">
-                        <h3>Nucleus Store</h3>
-                        <span>Live Source</span>
-                    </div>
-                </a>
-                <a href="https://Starbucksofficial.netlify.app/" class="work-card">
-                    <div id="work-2">
-                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1669444698/Screenshot_20221126_120759_p76l3h.png"
-                            alt="">
-                        <h3>Starbucks</h3>
-                    </div>
-                </a>
-                <!-- <a href="https://www.figma.com/proto/sNSbjUAa449z569uJHHP9h/Plantex?page-id=0%3A1&node-id=0%3A3&viewport=746%2C173%2C0.33&scaling=scale-down&starting-point-node-id=0%3A3&show-proto-sidebar=1">
-                    <div class="work-card" id="work-1">
-                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678119782/portfolio%20Image/Screenshot_2023-03-06_215242_hy2o8i.png"
-                            alt="">
-                        <h3>Plantex Working*</h3>
-                    </div>
-                </a> -->
-                <a href="https://oscarinternationalmarine.com/" class="work-card">
-                    <div id="work-3">
-                        <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1668575870/Stitched%20Clothing%20Project/bg%20Images/Screenshot_20221116_104716_crpqb2.png"
-                            alt="">
-                        <h3>Oscar International Marine Store</h3>
-                    </div>
-                </a>
+            <div class="info-side-for-project-card">
+              <div class="project-name">Todoster</div>
+              <div class="project-about">
+                Welcome to the Todoster Web Application! This simple and
+                user-friendly application helps you manage your tasks and stay
+                organized. This README will provide you with all the information
+                you need to get started, including features and more
+              </div>
+              <div class="project-tech-stack">
+                <b>Tech Stack: </b> Javascript, CSS and HTML
+              </div>
+              <div class="project-demo">
+                <a
+                  type="button"
+                  href="https://github.com/junaidahmedshaikh/Todoster"
+                  class="project-code-btn"
+                  >Code <i class="fa-brands fa-github"></i
+                ></a>
+                <a
+                  type="button"
+                  href="https://todosters.netlify.app"
+                  class="project-code-btn"
+                  >Live Demo <i class="fa-solid fa-link"></i
+                ></a>
+              </div>
             </div>
-        </section>
+          </div>
+          <!-- Project Card End -->
+
+          <!-- Project Card Start-->
+          <div class="project-card-outer">
+            <div class="image-side-for-project-card">
+              <img
+                src="https://res.cloudinary.com/difvkvxuy/image/upload/v1689478221/GitSpot/Screenshot_2023-07-16_085837_bmeuik.png"
+                alt=""
+              />
+            </div>
+            <div class="info-side-for-project-card">
+              <div class="project-name">GitSpot</div>
+              <div class="project-about">
+                The GitHub Profile Finder is a web application that allows users
+                to search for GitHub profiles and view detailed information
+                about them.
+              </div>
+              <div class="project-tech-stack">
+                <b>Tech Stack: </b> Javascript, CSS and HTML
+              </div>
+              <div class="project-demo">
+                <a
+                  type="button"
+                  href="https://github.com/junaidahmedshaikh/GitSpot"
+                  class="project-code-btn"
+                  >Code <i class="fa-brands fa-github"></i
+                ></a>
+                <a
+                  type="button"
+                  href="https://gitspot.netlify.app/"
+                  class="project-code-btn"
+                  >Live Demo <i class="fa-solid fa-link"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <!-- Project Card End -->
+          <!-- Project Card Start-->
+          <div class="project-card-outer">
+            <div class="image-side-for-project-card">
+              <img
+                src="https://res.cloudinary.com/difvkvxuy/image/upload/v1678119148/portfolio%20Image/Screenshot_2023-03-06_214158_gevqi9.png"
+                alt=""
+              />
+            </div>
+            <div class="info-side-for-project-card">
+              <div class="project-name">NoteX</div>
+              <div class="project-about">
+                NoteX is a simple web-based application that combines the
+                functionality of a basic text editor and a task management tool.
+                It provides users with a convenient platform to jot down notes,
+                create to-do lists, and manage their daily tasks efficiently.
+                With its clean and intuitive interface, this application aims to
+                enhance productivity and organization.
+              </div>
+              <div class="project-tech-stack">
+                <b>Tech Stack: </b> Javascript, CSS and HTML
+              </div>
+              <div class="project-demo">
+                <a
+                  type="button"
+                  href="https://github.com/junaidahmedshaikh/notex"
+                  class="project-code-btn"
+                  >Code <i class="fa-brands fa-github"></i
+                ></a>
+                <a
+                  type="button"
+                  href="https://notexx.netlify.app/"
+                  class="project-code-btn"
+                  >Live Demo <i class="fa-solid fa-link"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <!-- Project Card End -->
+        </div>
+      </section>
     </main>
     <nav id="navbar" class="hidden">
-        <div class="navbar-links">
-            <a class="navbar-card" href="/index.html">
-                <!-- <h2>Home</h2> -->
-                <img class="navbarHomeImgScr" 
-                    src=""
-                    alt="Homepage Loading">
-            </a>
-            <a class="navbar-card" href="/aboutPage/about.html">
-                <!-- <h2>About Me</h2> -->
-                <img  class="navbarAboutImgScr" src=""
-                    alt="">
-            </a>
-            <a class="navbar-card" href="/projectPage/projectPage.html">
-                <!-- <h2>Projects</h2> -->
-                <img  class="navbarProjectImgSrc" src=""
-                    alt="">
-            </a>
-            <a class="navbar-card" href="/skillsPage/skillsPage.html">
-                <!-- <h2>Skills</h2> -->
-                <img class="navbarSkillImgScr" 
-                    src=""
-                    alt="">
-            </a>
-        </div>
+      <div class="navbar-links">
+        <a class="navbar-card" href="/index.html">
+          <!-- <h2>Home</h2> -->
+          <img class="navbarHomeImgScr" src="" alt="Homepage Loading" />
+        </a>
+        <a class="navbar-card" href="/aboutPage/about.html">
+          <!-- <h2>About Me</h2> -->
+          <img class="navbarAboutImgScr" src="" alt="" />
+        </a>
+        <a class="navbar-card" href="/projectPage/projectPage.html">
+          <!-- <h2>Projects</h2> -->
+          <img class="navbarProjectImgSrc" src="" alt="" />
+        </a>
+        <a class="navbar-card" href="/skillsPage/skillsPage.html">
+          <!-- <h2>Skills</h2> -->
+          <img class="navbarSkillImgScr" src="" alt="" />
+        </a>
+      </div>
     </nav>
     <button id="nav-toggle" type="button" class="hameburger-container">
-        <div class="switch">
-            <input type="checkbox">
-            <div>
-                <span class="line-1"></span>
-                <span class="line-2"></span>
-                <span class="line-3"></span>
-            </div>
+      <div class="switch">
+        <input type="checkbox" />
+        <div>
+          <span class="line-1"></span>
+          <span class="line-2"></span>
+          <span class="line-3"></span>
         </div>
+      </div>
     </button>
     <script src="/main.js"></script>
-</body>
-
+  </body>
 </html>
