Added My Resume

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <a href="https://www.linkedin.com/in/junaid-ahmed-shaikh/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/junaidahmedshaikh"><i class="fa-brands fa-github"></i></a>
                 <a href="mailto: addyjames767gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://drive.google.com/file/d/1G90OOIsX-8YxqWSU7cluH-38jJ6Axqzc/view?usp=sharing" download=""><i class="fa-solid fa-file"></i></a>
             </div>
         </section>
     </main>
